--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with Github Pages.</p>
-</body>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="text-center">Cat</h1>
+        <h2 class="text-center"><em>The cat who saved a bilion lives</em></h2>
+        <div class="thumbnail"><img src="http://www.7-11shop.com/uploadfile/pic2/20123914909.jpg" alt="Russ Boots"><div class="caption text-center">Dr. Norman Borlaug, third from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</div>
+
+      </div>
+    </div>
+  </div>
+</div>
 </html>
