--- a/index.html
+++ b/index.html
@@ -3,74 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1">
-    <title>CLTsao</title>
+    <title>Page1</title>
   </head>
 
   <body>
-      <div class="container">
-          <div class="jumbotron">
-            <div class="row">
-              <div class="col-xs-12">
-                <h1 class="text-center">Cat</h1>
-                <h2 class="text-center"><em>The cat who saved a bilion lives</em></h2>
-                <div class="thumbnail"><img src="http://www.7-11shop.com/uploadfile/pic2/20123914909.jpg" alt="Russ Boots">
-                  <div class="caption text-center">Dr. Norman Borlaug, 
-                    third from left, trains biologists in Mexico on how to increase wheat yields - part of his <b>life-long</b> war on hunger.
-                  </div>
+      <p>
+        this is <strong>bold</strong><br>
+        this is <em>italic</em>
+      </p>
+      <a href="www.google.com">google.com</a>
 
-                  <ul>
-                    <li>1</li>
-                    <li>2</li>
-                  </ul>
+      <div></div>
+      <span></span>
 
-                  <ol>
-                    <li>1</li>
-                    <li>2</i>
-                  </ol>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
 
-                  <table border="10" cellpadding="10" cellspacing = "10">
-                    <tr>
-                      <th></th>
-                      <th>Month</th>
-                      <th>Rent</th>
-                      <th colspan="2">Utility</th>
-                      <th>Groceries</th>
-                      <th>Eating Out</th>
-                      <th>Entertainment</th>
-                    </tr>
-                    <tr>
-                      <td rowspan="3">Fall</td>
-                      <td>August</td>
-                      <td>$1500</td>
-                      <td>$100</td>'
-                      <td>$50</td>
-                      <td>$350</td>
-                      <td>$100</td>
-                      <td>$50</td>
-                    </tr>
-                    <tr>
-                        <td>August</td>
-                        <td>$1500</td>
-                        <td>$150</td>
-                        <td>$200</td>
-                        <td>$350</td>
-                        <td>$100</td>
-                        <td>$50</td>               
-                    </tr>
-                    <tr>
-                        <td>August</td>
-                        <td>$1500</td>
-                        <td>$150</td>
-                        <td>$200</td>
-                        <td>$350</td>
-                        <td>$100</td>
-                        <td>$50</td>   
-                    </tr>
-                  </table>
-        
-              </div>
-            </div>
-          </div>
-        </div>
+      <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ol>
   </body>
 </html>
