--- a/index.html
+++ b/index.html
@@ -3,29 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1">
-    <title>Page1</title>
+    <title>CLTsao</title>
   </head>
 
   <body>
-      <p>
-        this is <strong>bold</strong><br>
-        this is <em>italic</em>
-      </p>
-      <a href="www.google.com">google.com</a>
-
-      <div></div>
-      <span></span>
+      <h1>My Websit</h1>
 
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li><a href="page1.html">Page1</a></li>
+        <li><a href="page2.html">Page2</a></li>
       </ul>
 
-      <ol>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-      </ol>
+      <h2>This is my HomePage!</h2>
   </body>
 </html>
