--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <li><a href="page1.html">Page1</a></li>
         <li><a href="page2.html">Page2</a></li>
         <li><a href="page3.html">Page3</a></li>
+        <li><a href="page4.html">Page4</a></li>
       </ul>
 
       <h2>This is my HomePage!</h2>
