--- a/page4.html
+++ b/page4.html
@@ -31,9 +31,9 @@
         <li><a href="#" data-img = "imgpic3" id="pic3" >MyPicture-3</a></li>
       </ul>
 
-      <img id="imgpic1" class="hide" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_4981.JPG?raw=true" alt="My Pic 1">
-      <img id="imgpic2" class="hide" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_4998.JPG?raw=true" alt="My Pic 2">
-      <img id="imgpic3" class="hide" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_5173.JPG?raw=true" alt="My Pic 3">
+      <img id="imgpic1" class="hide img-thumbnail" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_4981.JPG?raw=true" alt="My Pic 1">
+      <img id="imgpic2" class="hide img-thumbnail" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_4998.JPG?raw=true" alt="My Pic 2">
+      <img id="imgpic3" class="hide img-thumbnail" src="https://github.com/cluntsao/cluntsao.github.io/blob/master/IMG_5173.JPG?raw=true" alt="My Pic 3">
 
       <ul id="checkList">
         <li>
