--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <li><a href="page2.html">Page2</a></li>
         <li><a href="page3.html">Page3</a></li>
         <li><a href="page4.html">Page4</a></li>
+        <li><a href="page5.html">Page5 Register Page</a></li>
       </ul>
 
       <h2>This is my HomePage!</h2>
