--- a/page5.html
+++ b/page5.html
@@ -8,10 +8,38 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>RegisterPage</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <h1>Register</h1>
+    </header>
+    <nav>
+      <a href="www.google.com">Google</a>
+      <a href="index.html" style="color : red">Back Home</a>
+    </nav>
+    
+    <form method="GET">
+      First Name: <input type="text" name="firstname"><br>
+      Last Name: <input type="text" name="lastname"><br>
+      Email: <input type="email" required name="email"><br>
+      Password: <input type="password" required min="5" name="password"><br>
+      Birthday <input type="date" name="birthday"><br>
+      Gender <br>
+      <input type="radio" name="gender" value="Male">Male<br>
+      <input type="radio" name="gender" value="Female">Female<br>
+      <input type="radio" name="gender" value="Other">Other<br>
+      Pets <br>
+      <input type="checkbox" name="cat"> Cat <br>
+      <input type="checkbox" name="dog"> Dog <br>
+      Cars <br>
+      <select name="cars">
+        <option value="volvo" >Volvo</option>
+        <option value="audi" >Audi</option>
+      </select>
+      <br>
+      <input type="submit" value="Register"><input type="reset" value="reset">
+    </form>
     
 
     <!-- Optional JavaScript -->
