--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </header>
 
     <section>
-        <h1>Hi! I am Ericsson Tsao. <br/>I'm a full-stack web developer & data analyst.</h1>
+        <h1>I'm a full-stack web developer & data analyst.</h1>
+        <!-- Hi! I am Ericsson Tsao. <br/> -->
     </section>
 
     <footer>
@@ -50,8 +51,11 @@
             <a href="https://www.linkedin.com/in/ericsson-tsao-06518bb6/" target="_blank">
                 <img src="./images/linkedin.svg" alt="My Linkedin">
             </a>
-            <a href="https://github.com/cluntsao" target="_blank">
+            <a href="https://codepen.io/cluntsao/" target="_blank">
                 <img src="./images/codepen.svg" alt="My Codepen">
+            </a>
+            <a href="mailto:tsaochelun@gmail.com">
+                <img src="./images/email.svg" alt="My Codepen">
             </a>
         </ul>
 
