update logo link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li>
                 <a href="#">projects</a>
-                <span>hurry, get back to the choppa!</span>
+                <span >hurry, get back to the choppa!</span>
             </li>
             <li>
                 <a href="#">email</a>
@@ -33,7 +33,7 @@
     </nav>
 
     <header>
-        <a href="#"><img src="./images/Tsao.svg" alt="Logo" class="logo"></a>
+        <a href="/"><img src="./images/Tsao.svg" alt="Logo" class="logo"></a>
 
         <img src="images/menu.svg" alt="" class="menu-btn" id="open-menu">
     </header>
