--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home | Ericsson Tsao</title>
+    <title>About | Ericsson Tsao</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./images/Tsao.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css">
@@ -16,15 +16,12 @@
         <ul>
             <li>
                 <a href="/">HOME</a>
-                <span>hurry, get back to the choppa!</span>
             </li>
             <li>
                 <a href="/about.html">ABOUT</a>
-                <span>hurry, get back to the choppa!</span>
             </li>
             <li>
                 <a href="/projects.html">PROJECTS</a>
-                <span >hurry, get back to the choppa!</span>
             </li>
             <!-- <li>
                 <a href="#">email</a>
@@ -39,8 +36,13 @@
         <img src="images/menu.svg" alt="" class="menu-btn" id="open-menu">
     </header>
 
-    <main>
-        <h1 style="text-align:center;">About main frame</h1>
+    <main class="about-main">
+        <img src="./images/me.png" alt="" width="150px">
+        <p>Ericsson (Che-Lun) Tsao</p>
+        <p>Pursuing Master's at Texas A&M University. </p>
+        <p>Worked for KPMG, TAMU Health Center as a data analyst</p>
+        <p>Interested in Machine Learning, A.I., Software Developement, and Sports.</p>
+        <p>Have soild knowledge in full-satck deveploment (React + Redux, Webpack, Git, Sass, Gatsby.js, SQL & No-SQL DB)</p>
     </main>
 
     <footer>
