--- a/index.html
+++ b/index.html
@@ -16,20 +16,13 @@
         <ul>
             <li>
                 <a href="/">HOME</a>
-                <span>hurry, get back to the choppa!</span>
             </li>
             <li>
-                <a href="/">ABOUT</a>
-                <span>hurry, get back to the choppa!</span>
+                <a href="/about.html">ABOUT</a>
             </li>
             <li>
                 <a href="/projects.html">PROJECTS</a>
-                <span >hurry, get back to the choppa!</span>
             </li>
-            <!-- <li>
-                <a href="#">email</a>
-                <span>hurry, get back to the choppa!</span>
-            </li> -->
         </ul>
     </nav>
 
